psychic game solved

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Psychic Game!</title>
 </head>
 <body>
-
+	<h1>The Psychic Game</h1>
+		<p>Guess what letter I'm thinking of...</p>
+		<p>Wins:</p><span id = "wins"></span>
+		<p>Losses:</p><span id = "losses"></span>
+		<p>Guesses Left:</p><span id = "guesses left"></span>
+		<p>Your Guesses So Far:</p><span id = "guesses so far"></span>
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
